sites/archived/navi-20251222/clusters/dal-navy-core-1/wave-2/overlays/traefik-public/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-public-ui
  annotations:
    cert-manager.io/cluster-issuer: dalmura-letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: traefik-public.navy.dalmura.cloud
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: true
spec:
  ingressClassName: ingress-public
  tls:
    - hosts:
      - traefik-public.navy.dalmura.cloud
      secretName: traefik-public-cert
  rules:
  - host: traefik-public.navy.dalmura.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-ingress-controller
            port:
              number: 8080
